--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,13 @@
         android:orientation="vertical"
         android:id="@+id/linearLayout"
         android:background="@android:color/holo_blue_dark">
+        <ImageView
+            android:id="@+id/imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/test"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
