--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,94 @@
         android:layout_height="fill_parent"
         android:orientation="vertical"
         android:id="@+id/linearLayout"
-        android:background="@android:color/holo_blue_dark">
-        <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        android:background="@color/peachpuff">
+        <ScrollView
+            android:layout_above="@id/control"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/musicList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+        </ListView>
+        </ScrollView>
+        <RelativeLayout
+            android:id="@+id/control"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/test"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv"
-            android:text="Content"
-            android:textSize="20dp"
-            android:layout_centerInParent="true"
-            android:textColor="@android:color/holo_red_dark"/>
+            >
+            <ImageView
+                android:id="@+id/album"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="4dip"
+                android:src="@drawable/album"/>
+            <ImageButton
+                android:id="@+id/next"
+                android:background="@drawable/next_press"
+                android:src="@drawable/next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="4dip"
+                android:layout_centerVertical="true"/>
+            <ImageButton
+                android:id="@+id/start_stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/next"
+                android:layout_centerVertical="true"
+                android:background="@drawable/music_play_button"
+                />
+            <ImageButton
+                android:id="@+id/last"
+                android:src="@drawable/last"
+                android:background="@drawable/last_press"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/start_stop"
+                android:layout_centerVertical="true"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:orientation="vertical"
+                android:layout_toRightOf="@id/album"
+
+                >
+                <TextView
+                    android:id="@+id/MusicName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MusicName"
+                    android:textSize="20sp"/>
+                <TextView
+                    android:id="@+id/Musician"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Musician"
+                    android:textSize="17sp"/>
+            </LinearLayout>
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:maxHeight="2.0dip"
+                android:minHeight="2.0dip"
+                />
+        </RelativeLayout>
     </RelativeLayout>
     <ListView
         android:background="@android:color/white"
         android:id="@+id/listview"
         android:layout_width="240dp "
         android:layout_height="fill_parent"
-        android:layout_gravity="right"
+        android:layout_gravity="left"
         />
 </android.support.v4.widget.DrawerLayout>
